# gh-release

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
gh_release/: cli.py  git.py  release.py  version.py
gh_release/version_files/: __init__.py  cargo_toml.py  dunder_version.py  package_json.py  pyproject.py  setup_py.py  version_file.py
github_release/: cli.py  release.py  version.py
github_release/version_files/: __init__.py  cargo_toml.py  dunder_version.py  package_json.py  pyproject.py  setup_py.py  version_file.py
release_mgr/: cli.py
tests/: test_gh_release.py  test_version.py
