[tool.poetry]
name = "gh-release"
version = "0.1.0"
description = ""
authors = ["Mathew Robinson <mathew@chasinglogic.io>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
